--- a/index.html
+++ b/index.html
@@ -7,6 +7,62 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="hello"> Hello world! </div>
+    <div class="navbar">
+        <img class="navbar-logo" src="#" alt="logo">
+        <h1 class="navbar-title">Portfolio</h1>
+    </div>
+
+    <div class="feature" id="feature">
+        <img class="feature-img" src="#" alt="featured photo">
+        <div class="feature-text">
+            <h3 class="feature-header">Autobiography</h3>
+            <p class="feature-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+
+    <div class="projects">
+        <div id="project-1" class="project">
+            <h3 class="project-head">Project 1</h3>
+            <p class="project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div id="project-2" class="project">
+            <h3 class="project-head">Project 2</h3>
+            <p class="project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div id="project-3" class="project">
+            <h3 class="project-head">Project 3</h3>
+            <p class="project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <img class="footer-logo" src="#" alt="logo">
+        <div class="footer-content">
+            <p class="address">Address: Las Pinas City, Metro Manila</p>
+            <p class="contact-info">Contact Information: 09989572088</p>
+            <p class="copyright-info">Copyight Information: lorem ipsum</p>
+            <a class="back-to-top" href="#feature">Back to Top</a>
+        </div>
+    </div>
 </body>
 </html>
