refactor: Redesign of projects & skills

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <div class="navbar">
+    <div class="navbar" id="header">
         <div class="navbar-left">
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
@@ -36,10 +36,63 @@
                 consectetur adipiscing elit. Aenean sit amet purus eu odio posuere condimentum. Suspendisse ac risus purus. Nulla eget tellus pellentesque, pulvinar arcu efficitur, 
                 vehicula lorem. Ut blandit feugiat leo, id sollicitudin orci consequat tristique. </p>
         </div>
-
-
-
+        <!-- PROJECTS -->
+        <div class="projects" id="projects">
+            <div class="projects-header">
+                <img src="./assets/border-left.png" alt="border">
+                <h1>Previous Projects</h1>
+                <img src="./assets/border-right.png" alt="border">
+            </div>
+            <div class="project" id="proj-1">
+                <div class="project-content">
+                    <h3>kasangga</h3>
+                    <p>Kasangga is a web application designed to streamline partnership management and enhance communication between organizations and individuals in UPLB. I contributed 
+                        to the frontend development of kasangga, focusing on UI/UX design and interactive elements such as forms.</p>
+                    <p>Technologies used: React.js, CSS, Axios</p>
+                    </div>
+                <a href="https://github.com/eljohnevnglsta/JPAD-UPLB-Organization-Partnerships" target="_blank">
+                    <img src="./assets/kasangga.png" alt="screenshot of kasangga">
+                </a>
+            </div>
+            <div class="project" id="proj-2">
+                <a href="https://github.com/loopsidoop/Fighting_Game" target="_blank">
+                    <img src="./assets/ljjm.jpeg" alt="screenshot of kasangga">
+                </a>
+                <div class="project-content">
+                    <h3>Laban Jan! Jan Madugo!</h3>
+                    <p>Laban Jan! Jan Madugo! is a fighting game with a strategy is focused on timing attacks and blocking when 
+                        necessary. I implemented character movement, animation systems, and other visual elements. </p>
+                    <p>Technologies used: Java, JavaFX, Eclipse</p>
+                </div>
+            </div>
+            <div class="project" id="proj-3">
+                <div class="project-content">
+                    <h3>Kartmania!!!</h3>
+                    <p>Kartmania is a kart simulator game with local multiplayer for 2 users. The player who hits less pedestrians in the given time wins. Everything was
+                         created by me.</p>
+                    <p>Technologies used: Java, JavaFX, Eclipse</p>
+                    </div>
+                <img src="./assets/kartmania.jpeg" alt="screenshot of kasangga">
+            </div>
+        </div>
+        <!-- SKILLS -->
+        <div class="skills" id="skills">
+            <img src="./assets/border.png" alt="border">
+            <div class="skills-content">
+                <h1>Skills</h1>
+                <ul class="skills-list">
+                    <li><strong>Languages:</strong> Python, C, Java, Javascript</li>
+                    <li><strong>Web Technologies:</strong> HTML, CSS, React.js</li>
+                    <li><strong>Soft Skills:</strong> Team Work, Flexibility, Creativity</li>
+                </ul>
+            </div>
+        </div>
+        <a href="#header" class="top">back to top!</a>
     </div>
-    
+
+    <!-- FOOTER -->
+    <div class="footer">
+        
+    </div>
 </body>
 </html>
