refactor: Redesign of footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        
+        <div class="footer-content">
+            <img src="./assets/logo.png" alt="logo">
+            <div class="footer-text">
+                <p><em>Based in</em> Las Pinas</p>
+                <p>0998 957 2088</p>
+                <p>jmlascano@up.edu.ph</p>
+            </div>
+        </div>
+        <p class="copyright">© 2025 Jana Mei Lascano. All rights reserved.</p>
     </div>
 </body>
 </html>
