chore: Update placeholder text in autobiography

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="feature">
             <img src="./assets/feature-img.png" alt="feature image">
             <h1>About Me</h1>
-            <p>Hi! My name is Jana Mei Clarice M. Lascano, a BS Computer Science student studying in the University of the Philippines - Los Banos. Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit. Aenean sit amet purus eu odio posuere condimentum. Suspendisse ac risus purus. Nulla eget tellus pellentesque, pulvinar arcu efficitur, 
-                vehicula lorem. Ut blandit feugiat leo, id sollicitudin orci consequat tristique. </p>
+            <p>Hi! My name is Jana Mei Clarice M. Lascano, a Computer Science student studying in the University of the Philippines - Los Banos. I’m passionate about creating—whether 
+                it’s through programming or digital art—and I try to have a little fun in the process. As I continue my studies, I’m eager to find a career path where I can combine my 
+                technical expertise with my creative vision, contributing to exciting and innovative projects. </p>
         </div>
         <!-- PROJECTS -->
         <div class="projects" id="projects">
