fix: Correct grammar error in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </a>
                 <div class="project-content">
                     <h3>Laban Jan! Jan Madugo!</h3>
-                    <p>Laban Jan! Jan Madugo! is a fighting game with a strategy is focused on timing attacks and blocking when 
+                    <p>Laban Jan! Jan Madugo! is a fighting game with a strategy focused on timing attacks and blocking when 
                         necessary. I implemented character movement, animation systems, and other visual elements. </p>
                     <p>Technologies used: Java, JavaFX, Eclipse</p>
                 </div>
