style: Make navbar stick to the top

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                          created by me.</p>
                     <p>Technologies used: Java, JavaFX, Eclipse</p>
                     </div>
-                <img src="./assets/kartmania.jpeg" alt="screenshot of kasangga">
+                <a href="#"> <!-- no github repo sadly -->
+                    <img src="./assets/kartmania.jpeg" alt="screenshot of kasangga">
+                </a>
             </div>
         </div>
         <!-- SKILLS -->
