--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </ul>
             </div>
         </div>
-        <a href="#header" class="top">back to top!</a>
+        <a href="#" class="top">back to top!</a>
     </div>
 
     <!-- FOOTER -->
