style: Add initial animation & hover transitions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="project" id="proj-1">
                 <div class="project-content">
-                    <h3>kasangga</h3>
+                    <h3><a href="https://github.com/eljohnevnglsta/JPAD-UPLB-Organization-Partnerships" target="_blank">kasangga</a></h3>
                     <p>Kasangga is a web application designed to streamline partnership management and enhance communication between organizations and individuals in UPLB. I contributed 
                         to the frontend development of kasangga, focusing on UI/UX design and interactive elements such as forms.</p>
                     <p>Technologies used: React.js, CSS, Axios</p>
@@ -59,7 +59,7 @@
                     <img src="./assets/ljjm.jpeg" alt="screenshot of kasangga">
                 </a>
                 <div class="project-content">
-                    <h3>Laban Jan! Jan Madugo!</h3>
+                    <h3><a href="https://github.com/loopsidoop/Fighting_Game" target="_blank">Laban Jan! Jan Madugo!</a></h3>
                     <p>Laban Jan! Jan Madugo! is a fighting game with a strategy focused on timing attacks and blocking when 
                         necessary. I implemented character movement, animation systems, and other visual elements. </p>
                     <p>Technologies used: Java, JavaFX, Eclipse</p>
