--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jana Mei's Portfolio</title>
 
+    <!-- ICON -->
+    <link rel="icon" href="./assets/icon.png">
+
     <!-- CSS -->
     <link rel="stylesheet" href="./styles.css">
 
