refactor: Overhaul layout & design of skills section

--- a/index.html
+++ b/index.html
@@ -85,11 +85,39 @@
             <img src="./assets/border.png" alt="border">
             <div class="skills-content">
                 <h1>Skills</h1>
-                <ul class="skills-list">
-                    <li><strong>Languages:</strong> Python, C, Java, Javascript</li>
-                    <li><strong>Web Technologies:</strong> HTML, CSS, React.js</li>
-                    <li><strong>Soft Skills:</strong> Team Work, Flexibility, Creativity</li>
-                </ul>
+                <div class="technologies">
+                    <h3>Technologies</h3>
+                    <div class="technologies-list">
+                        <div id="technology-1" class="technology">
+                            <img src="./assets/technical skill logos/c-logo.png" alt="c-logo">
+                            <p>C</p>
+                        </div>
+                        <div id="technology-2"class="technology">
+                            <img src="./assets/technical skill logos/python-logo.png" alt="python-logo">
+                            <p>Python</p>
+                        </div>
+                        <div id="technology-3" class="technology">
+                            <img src="./assets/technical skill logos/java-logo.png" alt="java-logo">
+                            <p>Java</p>
+                        </div>
+                        <div id="technology-4" class="technology">
+                            <img src="./assets/technical skill logos/javascript-logo.png" alt="javascript-logo">
+                            <p>Javascript</p>
+                        </div>
+                        <div id="technology-5" class="technology">
+                            <img src="./assets/technical skill logos/html-css-logo.png" alt="html-css-logo">
+                            <p>HTML & CSS</p>
+                        </div>
+                        <div id="technology-6" class="technology">
+                            <img src="./assets/technical skill logos/react-logo.png" alt="react-logo">
+                            <p>React</p>
+                        </div>
+                    </div>    
+                </div>
+                <div class="soft-skills">
+                    <h3>Soft Skills</h3>
+                    <p class="soft-skills-list">Team Work, Flexibility, Creativity, Time Management</p>
+                </div>                
             </div>
         </div>
         <a href="#" class="top">back to top!</a>
